@@ -100,5 +100,11 @@ public:
 	 * for passing into Win32 functions that require such representation
 	 */
 	static void PipesToNulls(TCHAR* buffer, size_t length );
+
+    /**
+     * Find and return the number n of starting characters equal between 
+     * \ref lhs and \ref rhs. (max n: lhs.Left(n) == rhs.Left(n))
+     */
+    static int GetMatchingLength (const CString& lhs, const CString& rhs);
 };
 
